--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -65,47 +65,75 @@
                 padding: 4px 10px;
                 text-decoration: none;
             }
+            #logo{
+              margin-bottom: 10px;
+              height: 80px;
+            }
+            #feedback{
+              margin-top: 10px;
+              font-size: 80%;
+            }
+            .grey{
+              background: grey;
+            }
         </style>
         <script src="vue.min.js" type="text/javascript" charset="utf-8" ></script>
         <script src="axios.min.js" type="text/javascript" ></script>
     </head>
     <body>
         <div class="container" id="app">
-            <img src="/images/logo.png">
-            <h2 style="text-align: center;">Wifi Setup</h2>
-            <form method="post" action="/">
-                <div class="field-group">
-                    <input name="epoch" id="epoch" type="hidden" value="" />
-                    <label>SSID</label>
-                    <select v-model="selectedwifi" name="ssid" type="text" length=64>
+            <img id="logo" src="/images/logo.png">
 
-                      <!-- Here goes the Access point list -->
-                      <option disabled value="">Select wifi ({{wifis["nets"].length}})</option>
-                      <option v-for="x in sortedWifi" :key="x.rssi" :value="x.ssid">{{x.ssid}} ({{x.rssi}}, {{x.ch}})</option>
+            <div id="main" style="text-align:center">
+              <p>Select [Network] if the device will connect to the internet, else choose [SD card]</p>
+              <button class="btn" v-bind:class="{ grey: setuppath=='wifi'}" v-on:click="selectPath('wifi')">Network</button>
+              <button class="btn" v-bind:class="{ grey: setuppath=='sdcard'}" v-on:click="selectPath('sdcard')">SD card</button>
+            </div>
 
-                    </select>
-                </div>
-                <button class="btn" type="button" v-on:click="axiosFetch('aplist')">Refresh wifilist</button>
-                <div class="field-group">
-                    <label>Password</label>
-                    <input name="password" type="text" v-model='wifipass' length=64>
-                </div>
-                <div class="field-group">
-                    <label>Token</label>
-                    <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6">
-                </div>
-                <!-- <div class="field-group">
-                    <label>Reading interval (seconds)</label>
-                    <input name="readint" type="text" value="60" length=64>
-                </div>-->
-                <button class="btn" type="button" v-on:click="axiosPost('connectwifi')">Connect</button>
+            <div v-if="setuppath == 'wifi'" id="wifisetup">
+              <h2 style="text-align: center;">Wifi Setup</h2>
+              <form method="post" action="/">
+                  <div class="field-group">
+                      <input name="epoch" id="epoch" type="hidden" value="" />
+                      <label>SSID</label>
+                      <select v-model="selectedwifi" name="ssid" type="text" length=64>
+
+                        <!-- Here goes the Access point list -->
+                        <option disabled value="">Select wifi ({{wifis["nets"].length}})</option>
+                        <option v-for="x in sortedWifi" :key="x.rssi" :value="x.ssid">{{x.ssid}} ({{x.rssi}}, {{x.ch}})</option>
+
+                      </select>
+                  </div>
+                  <button class="btn" type="button" v-on:click="axiosFetch('aplist')">Refresh wifilist</button>
+                  <div class="field-group">
+                      <label>Password</label>
+                      <input name="password" type="text" v-model='wifipass' length=64>
+                  </div>
+                  <div class="field-group">
+                      <label>Token</label>
+                      <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6">
+                  </div>
+                  <!-- <div class="field-group">
+                      <label>Reading interval (seconds)</label>
+                      <input name="readint" type="text" value="60" length=64>
+                  </div>-->
+                  <button class="btn" type="button" v-on:click="axiosPost('connectwifi')">Connect</button>
+              </form>
+
+              <div id="feedback">
                 <ul v-if="errors && errors.length">
-                    <li v-for="error of errors">
-                        {{error.message}}
-                    </li>
+                  <li v-for="error of errors">
+                    {{error.message}}
+                  </li>
                 </ul>
                 <i>{{ appstatus }}</i>
-            </form>
+              </div>
+            </div>
+
+            <div v-if="setuppath == 'sdcard'" id="sdcard">
+              <h2>SD CARD</h2>
+            </div>
+
         </div>
 
         <script type="text/javascript">
@@ -121,6 +149,7 @@
                     wifiname: '',
                     wifipass: '',
                     usertoken: '',
+                    setuppath: 'none',
                     wifis: {
                         "nets": [
                         {
@@ -142,6 +171,9 @@
                     setTimeout (() => this.axiosFetch('aplist'), 300)
                 },
                 methods: {
+                    selectPath: function(path){
+                      this.setuppath = path;
+                    },
                     jsFetch: function (path) {
                         // Backup function to fetch with pure javascript
                         // (If we cannot use extra libraries due to space issues etc)
