SD Card sync text info

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -131,7 +131,10 @@
             </div>
 
             <div v-if="setuppath == 'sdcard'" id="sdcard">
-              <h2>SD CARD</h2>
+              <h2 style="text-align: center">SD CARD</h2>
+              <p>Browser time:</p>
+              <p>Device time:</p>
+              <p>TODO: Sync time automatically or with a button?</p>
             </div>
 
         </div>
