--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -140,92 +140,96 @@
         </div>
 
         <script type="text/javascript">
-            document.getElementById("epoch").value = Math.floor((new Date).getTime()/1000);
+document.getElementById("epoch").value = Math.floor((new Date).getTime()/1000);
 
-            var app = new Vue({
-                el: '#app',
-                data: {
-                    theUrl: 'http://192.168.1.1/',
-                    // theUrl: 'http://localhost:3000/', // The mock api
-                    selectedwifi: '',
-                    appstatus: '(Status of the app)',
-                    wifiname: '',
-                    wifipass: '',
-                    usertoken: '',
-                    setuppath: 'none',
-                    wifis: {
-                        "nets": [
-                        {
-                            "ssid": "Fake-WIFI-1",
-                            "ch": 1,
-                            "rssi": -64
-                        },
-                        {
-                            "ssid": "Fake-Wifi-2",
-                            "ch": 1,
-                            "rssi": -89
-                        }]
-                    },
-                    errors: []
-                },
-                mounted: function() {
-                    // When the app is mounted
-                    console.log('mounted');
-                    setTimeout (() => this.axiosFetch('aplist'), 300)
-                },
-                methods: {
-                    selectPath: function(path){
-                      this.setuppath = path;
-                    },
-                    jsFetch: function (path) {
-                        // Backup function to fetch with pure javascript
-                        // (If we cannot use extra libraries due to space issues etc)
-                        this.appstatus = 'Fetching data...';
-                        var xmlHttp = new XMLHttpRequest();
-                        xmlHttp.open( "GET", this.theUrl + path, false ); // false for synchronous request
-                        xmlHttp.send( null );
-                        myjson = JSON.parse(xmlHttp.responseText);
-                        this.wifis = myjson;
-                    },
-                    axiosFetch: function(path) {
-                        this.appstatus = 'Fetching data...';
-                        axios.get(this.theUrl + path)
-                        .then(response => {
-                            this.appstatus = 'Data fetched.';
-                            //console.log(response);
-                            this.wifis = response.data;
-                        })
-                        .catch(response => {
-                            // Printing errors to the app output so our users can tell us.
-                            this.errors.push(response);
-                        });
-                    },
-                    axiosPost: function(path) {
-                        this.appstatus = 'Sending data... Please wait!';
-                        axios.post(this.theUrl + path, {
-                            clientWifi: this.selectedwifi,
-                            clientPass: this.wifipass,
-                            userToken: this.usertoken
-                        })
-                        .then(response => {
-                            console.log(response);
-                            this.appstatus = response.data;
-                        })
-                        .catch(e => {
-                            this.errors.push(e)
-                        })
-                    }
+var app = new Vue({
+  el: '#app',
+  data: {
+    // mock API
+    //theUrl: 'http://localhost:3000/',
+    theUrl: 'http://192.168.1.1/',
+    selectedwifi: '',
+    appstatus: '(Status of the app)',
+    wifiname: '',
+    wifipass: '',
+    usertoken: '',
+    setuppath: 'none',
+    wifis: {
+      "nets": [
+      {
+        "ssid": "Fake-WIFI-1",
+        "ch": 1,
+        "rssi": -64
+      },
+      {
+        "ssid": "Fake-Wifi-2",
+        "ch": 1,
+        "rssi": -89
+      }]
+    },
+    errors: []
+  },
+  mounted: function() {
+    // When the app is mounted
+    console.log('mounted');
+    setTimeout (() => this.axiosFetch('aplist'), 300)
+  },
+  methods: {
+    selectPath: function(path){
+      this.setuppath = path;
+    },
+    getCurrentTime: function(){
 
-                },
-                computed:{
-                    sortedWifi: function(){
-                        this.wifis.nets.sort((a,b) =>{
-                            return a.rssi - b.rssi;
-                        });
-                        return this.wifis.nets.reverse();
-                    }
-                }
-            });
+    }
+    jsFetch: function (path) {
+      // Backup function to fetch with pure javascript
+      // (If we cannot use extra libraries due to space issues etc)
+      this.appstatus = 'Fetching data...';
+      var xmlHttp = new XMLHttpRequest();
+      xmlHttp.open( "GET", this.theUrl + path, false ); // false for synchronous request
+      xmlHttp.send( null );
+      myjson = JSON.parse(xmlHttp.responseText);
+      this.wifis = myjson;
+    },
+    axiosFetch: function(path) {
+      this.appstatus = 'Fetching data...';
+      axios.get(this.theUrl + path)
+        .then(response => {
+          this.appstatus = 'Data fetched.';
+          //console.log(response);
+          this.wifis = response.data;
+        })
+      .catch(response => {
+        // Printing errors to the app output so our users can tell us.
+        this.errors.push(response);
+      });
+    },
+    axiosPost: function(path) {
+      this.appstatus = 'Sending data... Please wait!';
+      axios.post(this.theUrl + path, {
+        clientWifi: this.selectedwifi,
+        clientPass: this.wifipass,
+        userToken: this.usertoken
+      })
+      .then(response => {
+        console.log(response);
+        this.appstatus = response.data;
+      })
+      .catch(e => {
+        this.errors.push(e)
+      })
+    }
+
+  },
+  computed:{
+    sortedWifi: function(){
+      this.wifis.nets.sort((a,b) =>{
+        return a.rssi - b.rssi;
+      });
+      return this.wifis.nets.reverse();
+    }
+  }
+});
         </script>
     </body>
 </html>
