--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -8,7 +8,6 @@
                 font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
                 font-size: 22px;
                 line-height: 1.1;
-                padding: 20px;
             }
             .container {
                 margin: 0 auto;
@@ -71,6 +70,14 @@
             }
             #feedback{
               margin-top: 10px;
+            }
+            .tooltip{
+
+            }
+            .font70{
+              font-size: 70%;
+            }
+            .font80{
               font-size: 80%;
             }
             .grey{
@@ -81,65 +88,75 @@
         <script src="axios.min.js" type="text/javascript" ></script>
     </head>
     <body>
-        <div class="container" id="app">
-            <img id="logo" src="/images/logo.png">
+      <div class="container" id="app">
+        <div class="topnav font70">
+          <p><b>SSID:</b> {{ currentSSID }} - <b>TOKEN:</b> {{ currentToken }}</p>
+        </div>
+        <hr />
+        <img id="logo" src="/images/logo.png">
 
-            <div id="main" style="text-align:center">
-              <p>Select [Network] if the device will connect to the internet, else choose [SD card]</p>
-              <button class="btn" v-bind:class="{ grey: setuppath=='wifi'}" v-on:click="selectPath('wifi')">Network</button>
-              <button class="btn" v-bind:class="{ grey: setuppath=='sdcard'}" v-on:click="selectPath('sdcard')">SD card</button>
+        <div id="main" style="text-align:center">
+          <p class="font70">Select [Network] if the device will connect to the internet, else choose [SD card]</p>
+          <button class="btn" v-bind:class="{ grey: setuppath=='wifi'}" v-on:click="selectPath('wifi')">Network</button>
+          <button class="btn" v-bind:class="{ grey: setuppath=='sdcard'}" v-on:click="selectPath('sdcard')">SD card</button>
+        </div>
+        <hr />
+
+        <div v-if="setuppath == 'wifi'" id="wifisetup">
+          <h2 style="text-align: center;">Wifi Setup</h2>
+          <form method="post" action="/">
+            <div class="field-group">
+              <input name="epoch" id="epoch" type="hidden" value="" />
+              <label>SSID</label>
+              <select v-model="selectedwifi" name="ssid" type="text" length=64>
+
+                <!-- Here goes the Access point list -->
+                <option disabled value="">Select wifi ({{wifis["nets"].length}})</option>
+                <option v-for="x in sortedWifi" :key="x.rssi" :value="x.ssid">{{x.ssid}} ({{x.rssi}}, {{x.ch}})</option>
+
+              </select>
             </div>
-
-            <div v-if="setuppath == 'wifi'" id="wifisetup">
-              <h2 style="text-align: center;">Wifi Setup</h2>
-              <form method="post" action="/">
-                  <div class="field-group">
-                      <input name="epoch" id="epoch" type="hidden" value="" />
-                      <label>SSID</label>
-                      <select v-model="selectedwifi" name="ssid" type="text" length=64>
-
-                        <!-- Here goes the Access point list -->
-                        <option disabled value="">Select wifi ({{wifis["nets"].length}})</option>
-                        <option v-for="x in sortedWifi" :key="x.rssi" :value="x.ssid">{{x.ssid}} ({{x.rssi}}, {{x.ch}})</option>
-
-                      </select>
-                  </div>
-                  <button class="btn" type="button" v-on:click="axiosFetch('aplist')">Refresh wifilist</button>
-                  <div class="field-group">
-                      <label>Password</label>
-                      <input name="password" type="text" v-model='wifipass' length=64>
-                  </div>
-                  <div class="field-group">
-                      <label>Token</label>
-                      <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6">
-                  </div>
-                  <!-- <div class="field-group">
-                      <label>Reading interval (seconds)</label>
-                      <input name="readint" type="text" value="60" length=64>
-                  </div>-->
-                  <button class="btn" type="button" v-on:click="axiosPost('connectwifi')">Connect</button>
-              </form>
-
-              <div id="feedback">
-                <ul v-if="errors && errors.length">
-                  <li v-for="error of errors">
-                    {{error.message}}
-                  </li>
-                </ul>
-                <i>{{ appstatus }}</i>
-              </div>
+            <button class="btn" type="button" v-on:click="axiosFetch('aplist')">Refresh wifilist</button>
+            <div class="field-group">
+              <label>Password</label>
+              <input name="password" type="text" v-model='wifipass' length=64>
             </div>
-
-            <div v-if="setuppath == 'sdcard'" id="sdcard">
-              <h2 style="text-align: center">SD CARD</h2>
-              <p>Browser time:</p>
-              <p>Device time:</p>
-              <p>TODO: Sync time automatically or with a button?</p>
+            <div class="field-group">
+              <label>Token</label>
+              <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6">
             </div>
+            <!-- <div class="field-group">
+              <label>Reading interval (seconds)</label>
+              <input name="readint" type="text" value="60" length=64>
+              </div>-->
+            <button class="btn" type="button" v-on:click="axiosPost('connectwifi')">Connect</button>
+          </form>
 
+          <p>Debug, see console:</p>
+          <button class="btn" type="button" v-on:click="axiosFetch('status')">/status</button>
+          <button class="btn" type="button" v-on:click="axiosFetch('conf')">/conf</button>
+
+          <hr />
+          <div id="feedback" class="font80">
+            <ul v-if="errors && errors.length">
+              <li v-for="error of errors">
+                {{error.message}}
+              </li>
+            </ul>
+            <i>{{ appstatus }}</i>
+          </div>
         </div>
 
-        <script type="text/javascript">
+        <div v-if="setuppath == 'sdcard'" id="sdcard">
+          <h2 style="text-align: center">SD CARD</h2>
+          <p>Browser time: {{ browsertime }}</p>
+          <p>Device time:</p>
+          <p>TODO: Sync time automatically or with a button?</p>
+        </div>
+
+      </div>
+
+      <script type="text/javascript">
 document.getElementById("epoch").value = Math.floor((new Date).getTime()/1000);
 
 var app = new Vue({
@@ -150,10 +167,14 @@ var app = new Vue({
     theUrl: 'http://192.168.1.1/',
     selectedwifi: '',
     appstatus: '(Status of the app)',
+    browsertime: Date.now(),
+    currentToken: '',
+    currentSSID: '',
+    currentPassword: '',
     wifiname: '',
     wifipass: '',
     usertoken: '',
-    setuppath: 'none',
+    setuppath: 'wifi',
     wifis: {
       "nets": [
       {
@@ -173,14 +194,12 @@ var app = new Vue({
     // When the app is mounted
     console.log('mounted');
     setTimeout (() => this.axiosFetch('aplist'), 300)
+    setTimeout (() => this.axiosFetch('conf'), 400)
   },
   methods: {
     selectPath: function(path){
       this.setuppath = path;
     },
-    getCurrentTime: function(){
-
-    }
     jsFetch: function (path) {
       // Backup function to fetch with pure javascript
       // (If we cannot use extra libraries due to space issues etc)
@@ -192,12 +211,22 @@ var app = new Vue({
       this.wifis = myjson;
     },
     axiosFetch: function(path) {
-      this.appstatus = 'Fetching data...';
+      this.appstatus = 'Fetching data... /' + path;
       axios.get(this.theUrl + path)
         .then(response => {
           this.appstatus = 'Data fetched.';
-          //console.log(response);
-          this.wifis = response.data;
+          console.log(response.data);
+
+          // If this is a call for the Wifi list, populate this.wifis
+          if (path == 'aplist'){
+            console.log('network')
+            this.wifis = response.data;
+          }
+          if (path == 'conf'){
+            this.currentSSID = response.data.nets[0].ssid;
+            this.currentToken = response.data.token;
+          }
+
         })
       .catch(response => {
         // Printing errors to the app output so our users can tell us.
