--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -1,272 +1,80 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                color: #434343;
-                font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
-                font-size: 22px;
-                line-height: 1.1;
-            }
-            .container {
-                margin: 0 auto;
-                max-width: 400px;
-            }
-            img {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-            }
-            form .field-group {
-                box-sizing: border-box;
-                clear: both;
-                padding: 10px 0;
-                position: relative;
-                margin: 1px 0;
-                width: 100%;
-            }
-            form .field-group > label {
-                color: #a5acb2;
-                display: block;
-                margin: 0 0 5px 0;
-                position: relative;
-                word-wrap: break-word;
-            }
-            select[type=text], input[type=text] {
-                background: #fff;
-                border: 1px solid #d0d0d0;
-                border-radius: 2px;
-                box-sizing: border-box;
-                color: #434343;
-                font-family: inherit;
-                font-size: 1.1em;
-                height: 2.2em;
-                padding: 4px 5px;
-                margin: 0;
-                width: 100%;
-            }
-            input[type=text]:focus {
-                border-color: #4C669F;
-                outline: 0;
-            }
-            .btn{
-                background: #f5f5f5;
-                border: 1px solid #bdbdbd;
-                border-radius: 2px;
-                color: #434343;
-                cursor: pointer;
-                font-size: 22px;
-                font-variant: normal;
-                font-weight: 400;
-                height: 2.5em;
-                margin: 0;
-                padding: 4px 10px;
-                text-decoration: none;
-            }
-            #logo{
-              margin-bottom: 10px;
-              height: 80px;
-            }
-            #feedback{
-              margin-top: 10px;
-            }
-            .tooltip{
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css.css" type="text/css" />
+    <script src="vue.min.js" type="text/javascript" charset="utf-8" ></script>
+    <script src="axios.min.js" type="text/javascript" ></script>
+  </head>
+  <body>
+    <div class="container" id="app">
+      <div class="topnav font70">
+        <p><b>SSID:</b> {{ currentSSID }} - <b>TOKEN:</b> {{ currentToken }}
+        <a href="#" v-on:click="axiosFetch('conf')">(Reload /conf)</a>
+        </p>
+      </div>
+      <hr />
+      <img id="logo" src="/images/logo.png">
 
-            }
-            .font70{
-              font-size: 70%;
-            }
-            .font80{
-              font-size: 80%;
-            }
-            .grey{
-              background: grey;
-            }
-            .text-right{
-              text-align: right;
-            }
-        </style>
-        <script src="vue.min.js" type="text/javascript" charset="utf-8" ></script>
-        <script src="axios.min.js" type="text/javascript" ></script>
-    </head>
-    <body>
-      <div class="container" id="app">
-        <div class="topnav font70">
-          <p><b>SSID:</b> {{ currentSSID }} - <b>TOKEN:</b> {{ currentToken }}
-          <a href="#" v-on:click="axiosFetch('conf')">(Reload /conf)</a>
-          </p>
-        </div>
-        <hr />
-        <img id="logo" src="/images/logo.png">
+      <div id="main" class="center">
+        <p class="font70">Select [Network] if the device will connect to the internet, else choose [SD card]</p>
+        <button class="btn" v-bind:class="{ grey: setuppath=='wifi'}" v-on:click="selectPath('wifi')">Network</button>
+        <button class="btn" v-bind:class="{ grey: setuppath=='sdcard'}" v-on:click="selectPath('sdcard')">SD card</button>
+      </div>
+      <hr />
 
-        <div id="main" style="text-align:center">
-          <p class="font70">Select [Network] if the device will connect to the internet, else choose [SD card]</p>
-          <button class="btn" v-bind:class="{ grey: setuppath=='wifi'}" v-on:click="selectPath('wifi')">Network</button>
-          <button class="btn" v-bind:class="{ grey: setuppath=='sdcard'}" v-on:click="selectPath('sdcard')">SD card</button>
-        </div>
-        <hr />
-
-        <div v-if="setuppath == 'wifi'" id="wifisetup">
-          <h2 style="text-align: center;">Wifi Setup</h2>
-          <form method="post" action="/">
-            <div class="field-group">
-              <input name="epoch" id="epoch" type="hidden" value="" />
-              <label>SSID</label>
-              <select v-model="selectedwifi" name="ssid" type="text" length=64>
-
-                <!-- Here goes the Access point list -->
-                <option disabled value="">Select wifi ({{wifis["nets"].length}})</option>
-                <option v-for="x in sortedWifi" :key="x.rssi" :value="x.ssid">{{x.ssid}} ({{x.rssi}}, {{x.ch}})</option>
-
-              </select>
-            </div>
-            <button class="btn" type="button" v-on:click="axiosFetch('aplist')">Refresh wifilist</button>
-            <div class="field-group">
-              <label>Password</label>
-              <input name="password" type="text" v-model='wifipass' length=64>
-            </div>
-            <div class="field-group">
-              <label>Token</label>
-              <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6">
-            </div>
-            <!-- <div class="field-group">
-              <label>Reading interval (seconds)</label>
-              <input name="readint" type="text" value="60" length=64>
-              </div>-->
+      <div v-if="setuppath == 'wifi'" id="wifisetup">
+        <h2 class="center">Wifi Setup</h2>
+        <form method="post" action="/">
+          <div class="field-group">
+            <input name="epoch" id="epoch" type="hidden" value="" />
+            <label>SSID (Network name)</label>
+            <select v-model="selectedwifi" name="ssid" type="text" length=64>
+              <!-- Here goes the Access point list -->
+              <option disabled value="">Select wifi ({{wifis["nets"].length}})</option>
+              <option v-for="x in sortedWifi" :key="x.rssi" :value="x.ssid">{{x.ssid}} ({{x.rssi}}, {{x.ch}})</option>
+            </select>
+          </div>
+          <button class="btn" type="button" v-on:click="axiosFetch('aplist')">Refresh Wifi list</button>
+          <div class="field-group">
+            <label>Password</label>
+            <input name="password" type="text" v-model='wifipass' length=64>
+          </div>
+          <div class="field-group">
+            <label>Token</label>
+            <input name="token" type="text" maxlength="6" v-model='usertoken' minlength="6">
+          </div>
+          <!-- <div class="field-group">
+            <label>Reading interval (seconds)</label>
+            <input name="readint" type="text" value="60" length=64>
+            </div>-->
             <button class="btn" type="button" v-on:click="axiosPost('connectwifi')">Connect</button>
-          </form>
+        </form>
 
-          <div class="font70">
-            <p >Debug, see console:</p>
-            <a href="#" v-on:click="axiosFetch('status')">/status</a>
-          </div>
-
-          <hr />
-          <div id="feedback" class="font80">
-            <ul v-if="errors && errors.length">
-              <li v-for="error of errors">
-                {{error.message}}
-              </li>
-            </ul>
-            <i>{{ appstatus }}</i>
-          </div>
+        <div class="font70">
+          <p >Debug, see console:</p>
+          <a href="#" v-on:click="axiosFetch('status')">/status</a>
         </div>
 
-        <div v-if="setuppath == 'sdcard'" id="sdcard">
-          <h2 style="text-align: center">SD CARD</h2>
-          <p class="text-right font70">Browser time: {{ browsertime }}</p>
-          <p class="text-right font70">Device time: {{ devicetime }}</p>
-          <p>TODO: Sync time automatically or with a button?</p>
+        <hr />
+        <div id="feedback" class="font80">
+          <ul v-if="errors && errors.length">
+            <li v-for="error of errors">
+              {{error.message}}
+            </li>
+          </ul>
+          <i>{{ appstatus }}</i>
         </div>
-
       </div>
 
-      <script type="text/javascript">
-document.getElementById("epoch").value = Math.floor((new Date).getTime()/1000);
+      <div v-if="setuppath == 'sdcard'" id="sdcard">
+        <h2 class="center">SD CARD</h2>
+        <p class="text-right font70">Browser time: {{ browsertime }}</p>
+        <p class="text-right font70">Device time: {{ devicetime }}</p>
+        <p>TODO: Sync time automatically or with a button?</p>
+      </div>
 
-var app = new Vue({
-  el: '#app',
-  data: {
-    // mock API
-    //theUrl: 'http://localhost:3000/',
-    theUrl: 'http://192.168.1.1/',
-    selectedwifi: '',
-    appstatus: '(Status of the app)',
-    browsertime: Math.floor(Date.now() / 1000),
-    devicetime: '',
-    currentToken: '',
-    currentSSID: '',
-    currentPassword: '',
-    wifiname: '',
-    wifipass: '',
-    usertoken: '',
-    setuppath: 'wifi',
-    wifis: {
-      "nets": [
-      {
-        "ssid": "Fake-WIFI-1",
-        "ch": 1,
-        "rssi": -64
-      },
-      {
-        "ssid": "Fake-Wifi-2",
-        "ch": 1,
-        "rssi": -89
-      }]
-    },
-    errors: []
-  },
-  mounted: function() {
-    // When the app is mounted
-    console.log('mounted');
-    setTimeout (() => this.axiosFetch('aplist'), 300)
-    setTimeout (() => this.axiosFetch('conf'), 400)
-  },
-  methods: {
-    selectPath: function(path){
-      this.setuppath = path;
-    },
-    jsFetch: function (path) {
-      // Backup function to fetch with pure javascript
-      // (If we cannot use extra libraries due to space issues etc)
-      this.appstatus = 'Fetching data...';
-      var xmlHttp = new XMLHttpRequest();
-      xmlHttp.open( "GET", this.theUrl + path, false ); // false for synchronous request
-      xmlHttp.send( null );
-      myjson = JSON.parse(xmlHttp.responseText);
-      this.wifis = myjson;
-    },
-    axiosFetch: function(path) {
-      this.appstatus = 'Fetching data... /' + path;
-      axios.get(this.theUrl + path)
-        .then(response => {
-          this.appstatus = 'Data fetched.';
-          console.log(response.data);
-
-          // If this is a call for the Wifi list, populate this.wifis
-          if (path == 'aplist'){
-            console.log('network')
-            this.wifis = response.data;
-          }
-          if (path == 'conf'){
-            this.currentSSID = response.data.nets[0].ssid;
-            this.currentToken = response.data.token;
-            this.devicetime = response.data.time;
-          }
-
-        })
-      .catch(response => {
-        // Printing errors to the app output so our users can tell us.
-        this.errors.push(response);
-      });
-    },
-    axiosPost: function(path) {
-      this.appstatus = 'Sending data... Please wait!';
-      axios.post(this.theUrl + path, {
-        clientWifi: this.selectedwifi,
-        clientPass: this.wifipass,
-        userToken: this.usertoken
-      })
-      .then(response => {
-        console.log(response);
-        this.appstatus = response.data;
-      })
-      .catch(e => {
-        this.errors.push(e)
-      })
-    }
-
-  },
-  computed:{
-    sortedWifi: function(){
-      this.wifis.nets.sort((a,b) =>{
-        return a.rssi - b.rssi;
-      });
-      return this.wifis.nets.reverse();
-    }
-  }
-});
-        </script>
-    </body>
+    </div>
+    <script src="main.js" type="text/javascript" charset="utf-8"></script>
+  </body>
 </html>
