--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -52,7 +52,7 @@
         </form>
 
         <div class="font70">
-          <p >Debug, see console:</p>
+          <p>Debug, see console:</p>
           <a href="#" v-on:click="axiosFetch('status')">/status</a>
         </div>
 
@@ -65,12 +65,14 @@
           </ul>
           <i>{{ appstatus }}</i>
         </div>
-      </div>
+      </div> <!-- end network setup -->
 
       <div v-if="setuppath == 'sdcard'" id="sdcard">
         <h2 class="center">SD CARD</h2>
         <p class="text-right font70">Browser time: {{ browsertime }}</p>
         <p class="text-right font70">Device time: {{ devicetime }}</p>
+        <p class="text-right font70">Diff: {{ browsertime - devicetime }}</p>
+        <button class="btn" type="button" v-on:click="axiosPost('synctime')">Sync time</button>
         <p>TODO: Sync time automatically or with a button?</p>
       </div>
 
