Using GET instead of POST to connect to wifi

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -56,7 +56,7 @@
               <label>Reading interval (seconds)</label>
               <input name="readint" type="text" value="60" length=64>
               </div>-->
-              <button class="btn" type="button" v-on:click="axiosPost('set')">Connect</button>
+              <button class="btn" type="button" v-on:click="axiosGet('set')">Connect</button>
           </form>
 
           <div class="font70">
