--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -60,34 +60,36 @@
           </form>
 
           <hr />
-          <div class="font70">
-            <p>Debug section:</p>
-            <button class="btn btn-blue" v-on:click="axiosFetch('status')">See /status</button>
-            <ul v-if="statusapi && statusapi.length">
-              <li v-for="value in statusapi">{{value}}</li>
-            </ul>
+          <button v-bind:class="{ 'btn-blue': advanced}" class="btn " v-on:click="showAdvanced()">Advanced</button>
+          <div v-if="advanced" id="advanced" class="">
+            <div class="font70">
+              <p>Debug section:</p>
+              <button class="btn" v-on:click="axiosFetch('status')">See /status</button>
+              <ul v-if="statusapi && statusapi.length">
+                <li v-for="value in statusapi">{{value}}</li>
+              </ul>
+            </div>
+
+            <hr />
+            <div id="feedback" class="font80">
+              <p>Error section:</p>
+              <ul v-if="errors && errors.length">
+                <li v-for="error of errors">
+                  {{error.message}}
+                </li>
+              </ul>
+            </div>
+          </div> <!-- end network setup -->
+
+          <div v-if="setuppath == 'sdcard'" id="sdcard">
+            <h2 class="center">SD CARD</h2>
+            <p class="text-right font70">Browser time: {{ browsertime }}</p>
+            <p class="text-right font70">Device time: {{ devicetime }}</p>
+            <p class="text-right font70">Diff: {{ browsertime - devicetime }}</p>
+            <button class="btn" type="button" v-on:click="axiosPost('synctime')">Sync time</button>
+            <p>TODO: Sync time automatically or with a button?</p>
           </div>
-
-          <hr />
-          <div id="feedback" class="font80">
-            <p>Error section:</p>
-            <ul v-if="errors && errors.length">
-              <li v-for="error of errors">
-                {{error.message}}
-              </li>
-            </ul>
-          </div>
-        </div> <!-- end network setup -->
-
-        <div v-if="setuppath == 'sdcard'" id="sdcard">
-          <h2 class="center">SD CARD</h2>
-          <p class="text-right font70">Browser time: {{ browsertime }}</p>
-          <p class="text-right font70">Device time: {{ devicetime }}</p>
-          <p class="text-right font70">Diff: {{ browsertime - devicetime }}</p>
-          <button class="btn" type="button" v-on:click="axiosPost('synctime')">Sync time</button>
-          <p>TODO: Sync time automatically or with a button?</p>
-        </div>
-
+        </div> <!-- advanced -->
       </div>
     </div>
     <script src="main.js" type="text/javascript" charset="utf-8"></script>
