Add title to webpage, add tests

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css.css" type="text/css" />
     <script src="vue.min.js" type="text/javascript" charset="utf-8" ></script>
     <script src="axios.min.js" type="text/javascript" ></script>
+    <title>SCK Setup</title>
   </head>
   <body>
     <div class="container" id="app">
