Use relative image path

--- a/esp/data/index.html
+++ b/esp/data/index.html
@@ -12,7 +12,7 @@
 
       <div class="topnav font70">
         <a href="#" v-on:click="axiosFetch('status')">
-          <img id="toplogo" src="/images/sck.png">
+          <img id="toplogo" src="images/sck.png">
         </a>
         <div class="statuswrapper" style="text-align: right">
           <i id="" class="" style="text-align:right">{{ notification }}</i>
